# sklearn_other_metrics

./: .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  other_metrics.py  pyproject.toml  requirements.txt  test_other_metrics.py
.github/: linter.yml
.github/workflows/: ci.yml  linter.yml  python-package.yml
src/sklearn_other_metrics/: __init__.py  _classification.py  _regression.py
tests/: __init__.py  test_classification.py  test_regression.py
